@@ -2,11 +2,11 @@ package ru.practicum.ewm.location.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
+import ru.practicum.ewm.config.OffsetLimitPageable;
 import ru.practicum.ewm.exceptions.BadRequestException;
 import ru.practicum.ewm.exceptions.ObjectNotFoundException;
-import ru.practicum.ewm.location.model.*;
+import ru.practicum.ewm.location.model.Location;
 import ru.practicum.ewm.location.model.dto.LocationInputDto;
 import ru.practicum.ewm.location.model.dto.LocationMapper;
 import ru.practicum.ewm.location.model.dto.LocationOutputDto;
@@ -14,7 +14,6 @@ import ru.practicum.ewm.location.model.dto.LocationOutputDtoWithDistance;
 import ru.practicum.ewm.location.repository.LocationRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -24,9 +23,12 @@ public class LocationServiceImpl implements LocationService {
 
     @Override
     public LocationOutputDto addLocation(LocationInputDto locationInputDto) {
-        if (locationRepository.findLocation(locationInputDto.getLat(), locationInputDto.getLon()).isPresent()) {
+        if (locationRepository.findLocationByPointWithDistAndName(locationInputDto.getLat(), locationInputDto.getLon(),
+                locationInputDto.getRadius(), locationInputDto.getName()).isPresent()) {
+            log.warn("The location name={}, lat={}, lon={} was not added because such a location already exists in location radius",
+                    locationInputDto.getName(), locationInputDto.getLat(), locationInputDto.getLon());
             throw new BadRequestException("Location "
-                    + locationInputDto.getLat() + ":" + locationInputDto.getLon() + " is already added.");
+                    + locationInputDto.getLat() + " : " + locationInputDto.getLon() + " is already added.");
         }
         Location location = LocationMapper.toLocationFromInput(locationInputDto);
         return LocationMapper.toLocationOutput(locationRepository.save(location));
@@ -47,13 +49,6 @@ public class LocationServiceImpl implements LocationService {
                                                                String description,
                                                                Integer from,
                                                                Integer size) {
-        return locationRepository.searchLocations(lat, lon, distance, name, description, getPageRequest(from, size)).stream()
-                .collect(Collectors.toList());
-    }
-
-
-    private PageRequest getPageRequest(Integer from, Integer size) {
-        int page = from < size ? 0 : from / size;
-        return PageRequest.of(page, size);
+        return locationRepository.searchLocations(lat, lon, distance, name, description, OffsetLimitPageable.of(from, size)).toList();
     }
 }
